--- a/style.css
+++ b/style.css
@@ -10,6 +10,22 @@ a:hover {
   color: black;
 }
 
-#got h1 {
-  color: #c80000;
+#position .box {
+  position: relative;
+}
+#position .box .textbox {
+  width: 500px;
+}
+#position .box .minibox {
+  width: 150px;
+  height: 150px;
+  color: white;
+  border: 1px solid;
+  background-color: #eb61ee;
+  padding: 10px;
+  margin: 10px;
+}
+#position .box .run {
+  position: fixed;
+  right: 5px;
 }/*# sourceMappingURL=style.css.map */
